featuredcustomers.com (archived on 2017-04-16)
{
  "alexa_rank": 215690,
  "analysis_subcorpus": true,
  "categories": "business",
  "char_count": 8812,
  "classifier_probability": 0.9,
  "cross_domain_homepage_redir": false,
  "flesch_ease": "difficult",
  "flesch_kincaid": 15.42,
  "homepage_snapshot_redirected_domain": "featuredcustomers.com",
  "homepage_snapshot_redirected_url": "https://web.archive.org/web/20170416133459id_/https://www.featuredcustomers.com/",
  "homepage_snapshot_url": "https://web.archive.org/web/20170416133459id_/http%3A//featuredcustomers.com",
  "interval": "2017_A",
  "link_text": "Privacy",
  "parked_domain": false,
  "phase": "A",
  "policy_domain": "featuredcustomers.com",
  "policy_filetype": "html",
  "policy_snapshot_url": "https://web.archive.org/web/20170416133431id_/https%3A//www.featuredcustomers.com/privacy",
  "policy_title": "FeaturedCustomers Privacy Policy",
  "policy_url": "featuredcustomers.com/privacy",
  "sha1": "389e082520a748a2b8ef2048998563c1f1b4617e",
  "simhash": 2270107198825371754,
  "simhash_updated": true,
  "site_hostname": "featuredcustomers.com",
  "site_url": "http://featuredcustomers.com",
  "smog": 16.4,
  "strict_updated": true,
  "timestamp": "20170416133431",
  "word_count": 1404,
  "year": 2017
}

--- a/f/fe/fea/featuredcustomers.com.html
+++ b/f/fe/fea/featuredcustomers.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the featuredcustomers.com privacy policy that was archived on 2016-10-23.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20161023025940id_/http%3A//www.featuredcustomers.com/privacy) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the featuredcustomers.com privacy policy that was archived on 2017-04-16.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20170416133431id_/https%3A//www.featuredcustomers.com/privacy) for the most accurate reproduction.-->
 
 <!DOCTYPE html><html><head>
 
@@ -9,6 +9,28 @@
 
 
 <title>FeaturedCustomers Privacy Policy</title>
+
+
+
+
+<script async="" src="//www.google-analytics.com/analytics.js"></script><script id="twitter-wjs" src="https://platform.twitter.com/widgets.js"></script><script async="" src="//www.googletagmanager.com/gtm.js?id=GTM-NLNGLN"></script><script type="text/javascript" async="" src="https://cdn.heapanalytics.com/js/heap-2335031501.js"></script><script type="text/javascript" async="" src="https://fe.sitedataprocessing.com/fewv1/Scripts/fewliveasync.js"></script><script type="text/javascript"> 
+var fesdpid = 'yRay7yl5bh'; 
+var fesdp_BaseURL = (("https:" == document.location.protocol) ? "https://fe.sitedataprocessing.com/fewv1/" : "http://fe.sitedataprocessing.com/fewv1/");
+(function () { 
+var va = document.createElement('script'); va.type = 'text/javascript'; va.async = true; 
+va.src = fesdp_BaseURL + 'Scripts/fewliveasync.js'; 
+var sv = document.getElementsByTagName('script')[0]; sv.parentNode.insertBefore(va, sv); 
+})(); 
+</script>
+
+
+<script type="text/javascript">
+  window.heap=window.heap||[],heap.load=function(e,t){window.heap.appid=e,window.heap.config=t=t||{};var n=t.forceSSL||"https:"===document.location.protocol,a=document.createElement("script");a.type="text/javascript",a.async=!0,a.src=(n?"https:":"http:")+"//cdn.heapanalytics.com/js/heap-"+e+".js";var o=document.getElementsByTagName("script")[0];o.parentNode.insertBefore(a,o);for(var r=function(e){return function(){heap.push([e].concat(Array.prototype.slice.call(arguments,0)))}},p=["clearEventProperties","identify","setEventProperties","track","unsetEventProperty"],c=0;c<p.length;c++)heap[p[c]]=r(p[c])};
+  heap.load("2335031501");
+  
+</script>
+
+<script type="text/javascript" src="https://secure.leadforensics.com/js/86187.js"></script> 
 
 
 <link media="all" rel="stylesheet" href="/static/css/all.css"><link media="all" rel="stylesheet" href="/static/css/modal.css">
@@ -25,7 +47,7 @@
 
 <noscript><iframe src="//www.googletagmanager.com/ns.html?id=GTM-NLNGLN"
 height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
-<script async="" src="//www.google-analytics.com/analytics.js"></script><script id="twitter-wjs" src="https://platform.twitter.com/widgets.js"></script><script async="" src="//www.googletagmanager.com/gtm.js?id=GTM-NLNGLN"></script><script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
+<script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
 new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
 j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 '//www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
@@ -45,9 +67,11 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
                             <li><a href="/software">Software Categories</a>
                                 <div class="drop-down">
                                     <ul>
+                                        <li><a href="/software/ab-testing">A/B Testing Software</a></li>
                                         <li><a href="/software/accounting-finance-software">Accounting &amp; Finance Software</a></li>
                                         <li><a href="/software/application-performance-management-software">Application Performance Management Software</a></li>
                                         <li><a href="/software/market-intelligence-business-intelligence">Business Intelligence &amp; Market Intelligence Tools</a></li>
+                                        <li><a href="/software/church-management-software">Church Management Software</a></li>
                                         <li><a href="/software/cloud-computing-solutions">Cloud Computing Solutions</a></li>
                                         <li><a href="/software/collaboration-and-project-management-software">Collaboration &amp; Project Management Software</a></li>
                                         <li><a href="/software/information-and-communication-technology-ICT">Communications ICT</a></li>
@@ -60,26 +84,31 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
                                         <li><a href="/software/facilities-management">Facilities Management</a></li>
                                         <li><a href="/software/field-service-management-software">Field Service Management Software </a></li>
                                         <li><a href="/software/fleet-management-software">Fleet Management Software</a></li>
+                                        <li><a href="/software/fundraising-software">Fundraising Software </a></li>
                                         <li><a href="/software/hardware">Hardware</a></li>
+                                        <li><a href="/software/hr-employee-management-systems">HR &amp; Employee Management Systems</a></li>
                                     </ul>
                                     <ul>
-                                        <li><a href="/software/hr-employee-management-systems">HR &amp; Employee Management Systems</a></li>
                                         <li><a href="/software/it-management-systems">IT Management</a></li>
                                         <li><a href="/software/learning-management-systems-lms">Learning Management Systems (LMS)</a></li>
                                         <li><a href="/software/maintenance-management-software-cmms">Maintenance Management Software (CMMS)</a></li>
+                                        <li><a href="/software/mapping-software">Mapping Software</a></li>
                                         <li><a href="/software/marketing-solutions">Marketing Communications</a></li>
                                         <li><a href="/software/medical-software">Medical Software</a></li>
                                         <li><a href="/software/membership-management-software">Membership Management Software</a></li>
                                         <li><a href="/software/middleware-tools">Middleware Tools</a></li>
                                         <li><a href="/software/operations-management-systems">Operations &amp; Production Management</a></li>
-                                        <li><a href="/software/performance-appraisal-software">Performance Appraisal Software</a></li>
                                         <li><a href="/software/point-sale-pos">Point of Sale Software (POS)</a></li>
-                                        <li><a href="/software/professional-services">Professional Services</a></li>
-                                        <li><a href="/software/security-compliance-solutions">Security &amp; Compliance Solutions</a></li>
+                                        <li><a href="/software/professional-firms-agencies">Professional Firms &amp; Agencies</a></li>
+                                        <li><a href="/software/sales">Sales</a></li>
+                                        <li><a href="/software/security-software">Security Software</a></li>
                                         <li><a href="/software/service-providers">Service Providers</a></li>
                                         <li><a href="/software/development-tools">Software Development Tools</a></li>
                                         <li><a href="/software/supply-chain-logistics-solutions">Supply Chain Management &amp; Logistics</a></li>
+                                        <li><a href="/software/travel-management-software">Travel Management Software</a></li>
                                         <li><a href="/software/vertical-industry-software">Vertical Industry Software</a></li>
+                                        <li><a href="/software/video-software">Video Software</a></li>
+                                        <li><a href="/software/website-designers">Website Designers</a></li>
                                     </ul>
                                 </div>
                             </li>
@@ -126,7 +155,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 <p>We are committed to protecting the privacy of our users and toward clarifying all usage of personal information.</p>
 
 <p>You are being presented this Privacy Policy (“Privacy Policy”) because you are visiting a website (the “Website”) that is either (a) owned and operated by Software Prospect Inc. (“FeaturedCustomers.com”) or (b) includes content, including but not limited to registration and other forms, owned by SOFTWARE PROSPECT INC. or drawn from a website owned and operated by SOFTWARE PROSPECT INC. By accessing and using this Website or FeaturedCustomers.com services, you agree to be bound by this Privacy Policy and all other terms, policies and operating procedures that may be published on this Website. In addition, when you visit this Website or FeaturedCustomers.com and any of our participating business software providers’ ("Providers") websites, you are subject to both this Privacy Policy and any other terms of use and guidelines set forth at our Providers' websites. All these rules and policies are incorporated into this Privacy Policy by this reference. Please read this Privacy Policy, as well as the Terms of Use and Conditions (“Terms”), and any Provider’s terms and conditions carefully. If you do not agree to our Privacy Policy or our Terms, do not enter or use this Website. We reserve the right to update or otherwise modify this Privacy Policy from time to time. You are responsible for checking this Privacy Policy periodically for changes and updates. Your use of this Website following posted change(s) and update(s) will be deemed an acceptance of such change(s).</p>
-<p>SOFTWARE PROSPECT INC. operates http://featuredcustomers.com (the “Site”). This page informs you of our policies regarding the collection, use and disclosure of Personal Information we receive from users of the Site. We use your Personal Information only for providing and improving the Site. By using the Site, you agree to the collection and use of information in accordance with this policy.</p>
+<p>SOFTWARE PROSPECT INC. operates https://www.featuredcustomers.com (the “Site”). This page informs you of our policies regarding the collection, use and disclosure of Personal Information we receive from users of the Site. We use your Personal Information only for providing and improving the Site. By using the Site, you agree to the collection and use of information in accordance with this policy.</p>
 <ol>
 <li>
 <h3>Information Collection and Use</h3>
@@ -193,7 +222,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 <hr>
 
 <form action="#contactus" method="post" id="contactus_form">
-<input type="hidden" name="csrfmiddlewaretoken" value="R233dNtYgnhhA2tiq0Qu1qioyYii3fPo">
+<input type="hidden" name="csrfmiddlewaretoken" value="9cnrh96mjn0WgTQFWIRO5DwygUPrdD0n">
 
 <input type="hidden" name="contactus-submission_url" value="/privacy">
 <table>
@@ -285,7 +314,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 <hr>
 
 <form action="#addmybus" method="post" id="addmybusiness_form">
-<input type="hidden" name="csrfmiddlewaretoken" value="R233dNtYgnhhA2tiq0Qu1qioyYii3fPo">
+<input type="hidden" name="csrfmiddlewaretoken" value="9cnrh96mjn0WgTQFWIRO5DwygUPrdD0n">
 <table>
 <tbody>
 <tr><th>Your first name:</th><td><input id="id_addmybusiness-first_name" maxlength="255" name="addmybusiness-first_name" size="38" type="text"></td></tr>
@@ -340,7 +369,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
                 </div>
             </div>
             <div class="footer-bottom"> 
-                <p>© 2016 Featured Customers – 14041 NW 8th St, Sunrise, FL 33325<span class="seperator">|</span>1-888-SOFTWARE<span class="seperator">|</span>1-888-763-8927</p> 
+                <p>© 2017 Featured Customers – 14041 NW 8th St, Sunrise, FL 33325<span class="seperator">|</span>1-888-SOFTWARE<span class="seperator">|</span>1-888-763-8927</p> 
 
 <script src="//platform.linkedin.com/in.js" type="text/javascript"> lang: en_US</script>
 <script type="IN/Share"></script>
@@ -382,22 +411,23 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
    })();
    
 </script>
-<script type="text/javascript">
-    vtid = 109847;document.write(unescape("%3Cscript src='" + document.location.protocol + "//code.visitor-track.com/VisitorTrack.js' type='text/javascript'%3E%3C/script%3E"));
-</script><script src="https://code.visitor-track.com/VisitorTrack.js" type="text/javascript"></script>
 
-<noscript><img src="http://www.44-trk-srv.com/86187.png" style="display:none;" /></noscript>
+<script type="text/javascript">
+    document.cookie = "vt_status=1";
+</script>
+
+<noscript><img alt="" src="https://secure.leadforensics.com/86187.png" style="display:none;" /></noscript>
 
 <script type="application/ld+json">
   {
     "@context" : "http://schema.org",
     "@type" : "WebSite",
     "name" : "FeaturedCustomers",
-    "url" : "http://www.featuredcustomers.com",
-    "image": "http://www.featuredcustomers.com/static/images/logo.png",
+    "url" : "https://www.featuredcustomers.com",
+    "image": "https://www.featuredcustomers.com/static/images/logo.png",
     "potentialAction": {
       "@type": "SearchAction",
-      "target": "http://www.featuredcustomers.com/vendors?q={q}",
+      "target": "https://www.featuredcustomers.com/vendors?q={q}",
       "query-input": "required name=q"
     }
   }
@@ -407,8 +437,8 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
     "@context": "http://schema.org",
     "@type": "Organization",
     "name": "FeaturedCustomers",
-    "url": "http://www.featuredcustomers.com",
-    "logo": "http://www.featuredcustomers.com/static/images/logo.png"
+    "url": "https://www.featuredcustomers.com",
+    "logo": "https://www.featuredcustomers.com/static/images/logo.png"
   }
 </script>
 
