giganews.com (archived on 2017-04-17)
{
  "alexa_rank": 145588,
  "analysis_subcorpus": true,
  "categories": "business;informationtech",
  "char_count": 3722,
  "classifier_probability": 0.99,
  "cross_domain_homepage_redir": false,
  "flesch_ease": "difficult",
  "flesch_kincaid": 14.43,
  "homepage_snapshot_redirected_domain": "giganews.com",
  "homepage_snapshot_redirected_url": "https://web.archive.org/web/20170331103320id_/https://www.giganews.com/",
  "homepage_snapshot_url": "https://web.archive.org/web/20170331103320id_/http%3A//giganews.com",
  "interval": "2017_A",
  "link_text": "Privacy Policy",
  "parked_domain": false,
  "phase": "A",
  "policy_domain": "giganews.com",
  "policy_filetype": "html",
  "policy_snapshot_url": "https://web.archive.org/web/20170417005529id_/https%3A//www.giganews.com/legal/privacy.html",
  "policy_title": "Privacy Policy - Giganews",
  "policy_url": "giganews.com/legal/privacy.html",
  "sha1": "b8738c9914969edaef770c7468ad3d814ecc827f",
  "simhash": 18006008709424389141,
  "simhash_updated": false,
  "site_hostname": "giganews.com",
  "site_url": "http://giganews.com",
  "smog": NaN,
  "strict_updated": false,
  "timestamp": "20170417005529",
  "word_count": 586,
  "year": 2017
}

--- a/g/gi/gig/giganews.com.html
+++ b/g/gi/gig/giganews.com.html
@@ -1,7 +1,7 @@
-<!--The following is the downloaded HTML source of the giganews.com privacy policy that was archived on 2016-12-15.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20161215030920id_/http%3A//www.giganews.com/legal/privacy.html) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the giganews.com privacy policy that was archived on 2017-04-17.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20170417005529id_/https%3A//www.giganews.com/legal/privacy.html) for the most accurate reproduction.-->
 
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd"><html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en" style="" class=" js flexbox rgba hsla multiplebgs backgroundsize borderimage borderradius boxshadow textshadow opacity cssanimations csscolumns cssgradients cssreflections csstransforms csstransforms3d csstransitions fontface generatedcontent boxsizing mediaqueries lastchild pointerevents cssresize placeholder formvalidation"><head>
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "https://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd"><html xmlns="https://www.w3.org/1999/xhtml" xml:lang="en" lang="en" style="" class=" js flexbox rgba hsla multiplebgs backgroundsize borderimage borderradius boxshadow textshadow opacity cssanimations csscolumns cssgradients cssreflections csstransforms csstransforms3d csstransitions fontface generatedcontent boxsizing mediaqueries lastchild pointerevents cssresize placeholder formvalidation"><head>
   <title>Privacy Policy - Giganews</title>
 
   <meta name="description" content="Giganews' policies to protect the privacy of our Usenet members, including policies concerning civil and criminal investigation, the use of personal information, and Usenet usage information.">
@@ -12,15 +12,16 @@
   <meta name="com.silverpop.cothost" content="engage2.silverpop.com">
   <meta content="width=device-width, initial-scale=1" name="viewport">
   <link href="https://plus.google.com/110275737366058294882" rel="publisher">
-  <link rel="alternate" hreflang="pt" href="http://br.giganews.com/legal/privacy.html">
-  <link rel="alternate" hreflang="zh" href="http://cn.giganews.com/legal/privacy.html">
-  <link rel="alternate" hreflang="de" href="http://de.giganews.com/legal/privacy.html">
-  <link rel="alternate" hreflang="es" href="http://es.giganews.com/legal/privacy.html">
-  <link rel="alternate" hreflang="fr" href="http://fr.giganews.com/legal/privacy.html">
-  <link rel="alternate" hreflang="ja" href="http://jp.giganews.com/legal/privacy.html">
-  <link rel="alternate" hreflang="ko" href="http://kr.giganews.com/legal/privacy.html">
-  <link rel="alternate" hreflang="nl" href="http://nl.giganews.com/legal/privacy.html">
-  <link rel="alternate" hreflang="zh-TW" href="http://tw.giganews.com/legal/privacy.html">
+  <link rel="alternate" hreflang="pt" href="https://br.giganews.com/legal/privacy.html">
+  <link rel="alternate" hreflang="zh" href="https://cn.giganews.com/legal/privacy.html">
+  <link rel="alternate" hreflang="de" href="https://de.giganews.com/legal/privacy.html">
+  <link rel="alternate" hreflang="en" href="https://www.giganews.com/legal/privacy.html">
+  <link rel="alternate" hreflang="es" href="https://es.giganews.com/legal/privacy.html">
+  <link rel="alternate" hreflang="fr" href="https://fr.giganews.com/legal/privacy.html">
+  <link rel="alternate" hreflang="ja" href="https://jp.giganews.com/legal/privacy.html">
+  <link rel="alternate" hreflang="ko" href="https://kr.giganews.com/legal/privacy.html">
+  <link rel="alternate" hreflang="nl" href="https://nl.giganews.com/legal/privacy.html">
+  <link rel="alternate" hreflang="zh-TW" href="https://tw.giganews.com/legal/privacy.html">
 
   <link rel="stylesheet" href="/styles/layout.css" title="Giganews" type="text/css">
   <link href="/styles/chat.css" rel="stylesheet" type="text/css">
@@ -28,7 +29,7 @@
   <link rel="stylesheet" href="/styles/ie/gn.css" title="Giganews" type="text/css" />
   <![endif]-->
   <link rel="stylesheet" href="/styles/gn-responsive.css" type="text/css">
-  <script src="//bat.bing.com/bat.js" async=""></script><script async="" src="//connect.facebook.net/en_US/fbds.js"></script><script type="text/javascript" async="" src="https://apis.google.com/js/plusone.js"></script><script async="" src="//www.google-analytics.com/analytics.js"></script><script type="text/javascript" src="/js/modernizr.custom.min.js"></script>
+  <script src="//bat.bing.com/bat.js" async=""></script><script async="" src="https://connect.facebook.net/en_US/fbevents.js"></script><script type="text/javascript" async="" src="https://apis.google.com/js/plusone.js"></script><script async="" src="//www.google-analytics.com/analytics.js"></script><script type="text/javascript" src="/js/modernizr.custom.min.js"></script>
   <script type="text/javascript" src="https://use.typekit.com/lav7mbm.js"></script>
   <script type="text/javascript">try{Typekit.load();}catch(e){}</script>
   <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.4.4/jquery.min.js"></script>
@@ -461,10 +462,10 @@ Giganews holds personal information about you in the strictest confidence and do
   <div class="sb-block social-block">
     <h4>Follow Giganews:</h4>
 <ul class="unstyled clearfix follow-gn-sidebar">
-  <li class="iblock pull-left"><a class="social-link outbound twitter-icon" href="http://www.twitter.com/giganews">Giganews Twitter</a></li>
-  <li class="iblock pull-left"><a class="social-link outbound facebook-icon" href="http://www.facebook.com/giganews">Giganews Facebook</a></li>
+  <li class="iblock pull-left"><a class="social-link outbound twitter-icon" href="https://www.twitter.com/giganews">Giganews Twitter</a></li>
+  <li class="iblock pull-left"><a class="social-link outbound facebook-icon" href="https://www.facebook.com/giganews">Giganews Facebook</a></li>
   <li class="iblock pull-left"><a class="social-link outbound gplus-icon" href="https://plus.google.com/110275737366058294882?prsrc=3"><img src="https://ssl.gstatic.com/images/icons/gplus-32.png" alt="Giganews Google+"></a></li>
-  <li class="iblock pull-left"><a class="social-link outbound rss-icon" href="http://www.giganews.com/blog/feed/rss.xml">Giganews RSS</a></li>
+  <li class="iblock pull-left"><a class="social-link outbound rss-icon" href="https://www.giganews.com/blog/feed/rss.xml">Giganews RSS</a></li>
 </ul>
   </div>
   <div class="sb-block">
@@ -532,8 +533,8 @@ Giganews holds personal information about you in the strictest confidence and do
   <h3>What People are Saying</h3>
   <blockquote class="testimonial">
     <p>
-    To put simply, Giganews is the best value/feature-for-money usenet on the market today. You guys rock.
-    <cite>Clément - Paris, France</cite>
+    I feel very safe when i know VyprVpn is on my side.
+    <cite>Anton - Philadelphia, Pennsylvania</cite>
     </p>
   </blockquote>
   <span id="triangle"></span>
@@ -617,16 +618,16 @@ Giganews holds personal information about you in the strictest confidence and do
         <li class="gn-grid-col gn-grid-col-3 col-languages">
           <h3>Languages</h3>
           <ul>
-            <li><a href="http://www.giganews.com/legal/privacy.html" onclick="langCookie('');">English</a></li>
-            <li><a href="http://fr.giganews.com/legal/privacy.html" onclick="langCookie('fr');">Français</a></li>
-            <li><a href="http://br.giganews.com/legal/privacy.html" onclick="langCookie('br');">Português</a></li>
-            <li><a href="http://cn.giganews.com/legal/privacy.html" onclick="langCookie('cn');">简体中文</a></li>
-            <li><a href="http://de.giganews.com/legal/privacy.html" onclick="langCookie('de');">Deutsch</a></li>
-            <li><a href="http://es.giganews.com/legal/privacy.html" onclick="langCookie('es');">Español</a></li>
-            <li><a href="http://jp.giganews.com/legal/privacy.html" onclick="langCookie('jp');">日本語</a></li>
-            <li><a href="http://kr.giganews.com/legal/privacy.html" onclick="langCookie('kr');">한국어</a></li>
-            <li><a href="http://nl.giganews.com/legal/privacy.html" onclick="langCookie('nl');">Nederlands</a></li>
-            <li><a href="http://tw.giganews.com/legal/privacy.html" onclick="langCookie('tw');">繁體中文</a></li>
+            <li><a href="https://www.giganews.com/legal/privacy.html" onclick="langCookie('');">English</a></li>
+            <li><a href="https://fr.giganews.com/legal/privacy.html" onclick="langCookie('fr');">Français</a></li>
+            <li><a href="https://br.giganews.com/legal/privacy.html" onclick="langCookie('br');">Português</a></li>
+            <li><a href="https://cn.giganews.com/legal/privacy.html" onclick="langCookie('cn');">简体中文</a></li>
+            <li><a href="https://de.giganews.com/legal/privacy.html" onclick="langCookie('de');">Deutsch</a></li>
+            <li><a href="https://es.giganews.com/legal/privacy.html" onclick="langCookie('es');">Español</a></li>
+            <li><a href="https://jp.giganews.com/legal/privacy.html" onclick="langCookie('jp');">日本語</a></li>
+            <li><a href="https://kr.giganews.com/legal/privacy.html" onclick="langCookie('kr');">한국어</a></li>
+            <li><a href="https://nl.giganews.com/legal/privacy.html" onclick="langCookie('nl');">Nederlands</a></li>
+            <li><a href="https://tw.giganews.com/legal/privacy.html" onclick="langCookie('tw');">繁體中文</a></li>
           </ul>
         </li>
         </ul>
@@ -634,22 +635,22 @@ Giganews holds personal information about you in the strictest confidence and do
       <div class="gn-grid-col gn-grid-col-4 footer-social">
         <ul class="socialIcons">
   <li class="facebook">
-    <a class="outbound" href="http://www.facebook.com/giganews">
+    <a class="outbound" href="https://www.facebook.com/giganews">
       <img src="/images/icon_social_facebook.png" alt="Giganews Facebook">
     </a>
   </li>
   <li class="twitter">
-    <a class="outbound" href="http://www.twitter.com/giganews">
+    <a class="outbound" href="https://www.twitter.com/giganews">
       <img src="/images/icon_social_twitter.png" alt="Giganews Twitter">
     </a>
   </li>
   <li class="youtube">
-    <a class="outbound" href="http://www.youtube.com/giganews">
+    <a class="outbound" href="https://www.youtube.com/giganews">
       <img src="/images/icon_social_youtube.png" alt="Giganews YouTube">
     </a>
   </li>
   <!-- <li class="linkedin">
-    <a class="outbound" href="http://www.linkedin.com/company/giganews">
+    <a class="outbound" href="https://www.linkedin.com/company/giganews">
       <img src="" alt="Giganews LinkedIn" />
     </a>
   </li> -->
@@ -663,7 +664,7 @@ Giganews holds personal information about you in the strictest confidence and do
       </div>
     </div>
     <p class="gnCopyright">
-      Giganews® and the Giganews logo are registered trademarks of Giganews, Inc. ©2016 Giganews, Inc.
+      Giganews® and the Giganews logo are registered trademarks of Giganews, Inc. ©2017 Giganews, Inc.<br> United States
     </p>
   </div>
 </div>
@@ -707,25 +708,22 @@ var google_remarketing_only = true;
 </noscript>
 
 
-<script type="text/javascript">
-/* <![CDATA[ */
-(function() {
-var _fbq = window._fbq || (window._fbq = []);
-if (!_fbq.loaded) {
-var fbds = document.createElement('script');
-fbds.async = true;
-fbds.src = '//connect.facebook.net/en_US/fbds.js';
-var s = document.getElementsByTagName('script')[0];
-s.parentNode.insertBefore(fbds, s);
-_fbq.loaded = true;
-}
-_fbq.push(['addPixelId', '361574640699473']);
-})();
-window._fbq = window._fbq || [];
-window._fbq.push(['track', 'PixelInitialized', {}]);
-/* ]]> */
+<!-- Facebook Pixel Code -->
+<script>
+!function(f,b,e,v,n,t,s){if(f.fbq)return;n=f.fbq=function()
+{n.callMethod? n.callMethod.apply(n,arguments):n.queue.push(arguments)}
+;if(!f._fbq)f._fbq=n;
+n.push=n;n.loaded=!0;n.version='2.0';n.queue=[];t=b.createElement(e);t.async=!0;
+t.src=v;s=b.getElementsByTagName(e)[0];s.parentNode.insertBefore(t,s)}(window,
+document,'script','https://connect.facebook.net/en_US/fbevents.js');
+fbq('init', '361574640699473'); // Insert your pixel ID here.
+fbq('track', 'PageView');
 </script>
-<noscript><img height="1" width="1" alt="" style="display:none" src="https://www.facebook.com/tr?id=361574640699473&amp;ev=PixelInitialized" /></noscript>
+<noscript><img height="1" width="1" style="display:none"
+src="https://www.facebook.com/tr?id=361574640699473&ev=PageView&noscript=1"
+/></noscript>
+<!-- DO NOT MODIFY -->
+<!-- End Facebook Pixel Code -->
 
 
 <script src="//platform.twitter.com/oct.js" type="text/javascript"></script>
