--- a/n/na/naa/naaibuddies.com.html
+++ b/n/na/naa/naaibuddies.com.html
@@ -1,14 +1,14 @@
-<!--The following is the downloaded HTML source of the naaibuddies.com privacy policy that was archived on 2016-12-02.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20161202114134id_/http%3A//local.naaibuddies.com/help/privacy.cfm%3Fwldsite%3D21613) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the naaibuddies.com privacy policy that was archived on 2017-04-17.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20170417102016id_/http%3A//local.naaibuddies.com/help/privacy.cfm%3Fwldsite%3D21613) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd"><html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en"><!--<![endif]--><head>
 	
 	<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 	<title>NaaiBuddies.com :: NaaiBuddies.com Member Privacy Policy</title>
-	<meta name="robots" content="noindex,nofollow"> <meta content="kBw+ayIXSOJZCCGorg5l3cN2+8KMdd2ENKDc5O7kfxA=" name="csrf-token"> 
+	<meta name="robots" content="noindex,nofollow"> <meta content="VYLmXOSCN00uNzZjFvpYfTjYOwTVNGb458ttD16CAt0=" name="csrf-token"> 
 
 	
-	<link rel="stylesheet" type="text/css" media="all" href="http://s.wldcdn.net/assets/template/premium/styles/sites/21613/core-2B8A2C76E10608016485E79AC7ECBEBF.css">
+	<link rel="stylesheet" type="text/css" media="all" href="http://s.wldcdn.net/assets/template/premium/styles/sites/21613/core-7DC1F7AD41D319B1CFB9D63C33E37371.css">
 
 	
 
@@ -370,7 +370,8 @@ data to these websites.
 		<li id="footer-cookie"><a href="/help/cookies.cfm">Cookie Policy</a></li>
 		<li id="footer-charter"><a href="/help/charter.cfm">Customer Charter</a></li>
 		<li id="footer-safety"><a href="/help/safety.cfm">Safety</a></li>
-		<li id="footer-odp"><a href="http://www.onlinedatingprotector.com" target="_blank">Online Dating Protector</a></li>
+		
+			<li id="footer-odp"><a href="http://www.onlinedatingprotector.com" target="_blank">Online Dating Protector</a></li>
 		
 		<li id="footer-contact"><a href="/help/contact.cfm">Contact Us</a></li>
 		
@@ -378,7 +379,7 @@ data to these websites.
 
 	
 	<ul class="footer-nav hnav">
-		<li id="footer-copyright" class="copyright faded">© 2016 All Rights Reserved.</li>
+		<li id="footer-copyright" class="copyright faded">© 2017 All Rights Reserved.</li>
 	</ul>
 </div><!-- #footer -->
 
@@ -389,8 +390,8 @@ data to these websites.
 		
 	<script src="http://s.wldcdn.net/assets/template/premium/scripts/vendor.min.js?9f94ab9f305fc2b67f57f2b643bd0903" type="text/javascript" charset="utf-8"></script>
 	<script src="http://s.wldcdn.net/assets/template/premium/scripts/en_ZA.min.js?2d646246cdc54fa64aed130de00ab952" type="text/javascript" charset="utf-8"></script>
-	<script src="http://s.wldcdn.net/assets/template/premium/scripts/wldlib.min.js?89dfd2e9e75507d804ebdce93fe4db9b" type="text/javascript" charset="utf-8"></script>
-	<script src="http://s.wldcdn.net/assets/template/premium/scripts/app.min.js?21c40462ae55b39af29be9f77c8e29f3" type="text/javascript" charset="utf-8"></script>
+	<script src="http://s.wldcdn.net/assets/template/premium/scripts/wldlib.min.js?8c3c37170294d4365fa705b5613d018b" type="text/javascript" charset="utf-8"></script>
+	<script src="http://s.wldcdn.net/assets/template/premium/scripts/app.min.js?1527fe48ba4fa4d1bb3047c77fcbf0ac" type="text/javascript" charset="utf-8"></script>
 
 
 	</div><!-- #js-holder -->
@@ -451,65 +452,28 @@ data to these websites.
 
 	</script>
 
-<noscript><img src="//www.google-analytics.com/__utm.gif?utmwv=4.3&amp;utmn=141170965&amp;utmhn=local.naaibuddies.com&amp;utmsr=-&utmsc=-&utmul=-&utmje=0&utmfl=-&utmdt=-&amp;utmr=&amp;utmp=/noscript&amp;utmac=UA-3965813-20&amp;utmcc=__utma%3D95118579.2043391180.1480673070.1480673070.1480673070.2%3B%2B__utmb%3D95118579%3B%2B__utmc%3D95118579%3B%2B__utmz%3D95118579.1480673070.2.2.utmccn%3D(direct)%7Cutmcsr%3D(direct)%7Cutmcmd%3D(none)%3B%2B__utmv%3D95118579.-%3B" /></noscript> <!-- START GSM IMPRESSION TRACKER -->
+<noscript><img src="//www.google-analytics.com/__utm.gif?utmwv=4.3&amp;utmn=404855690&amp;utmhn=local.naaibuddies.com&amp;utmsr=-&utmsc=-&utmul=-&utmje=0&utmfl=-&utmdt=-&amp;utmr=http%3A%2F%2Fwww%2Enaaibuddies%2Ecom%2F&amp;utmp=/noscript&amp;utmac=UA-3965813-20&amp;utmcc=__utma%3D85345961.1134194901.1492424416.1492424416.1492424416.2%3B%2B__utmb%3D85345961%3B%2B__utmc%3D85345961%3B%2B__utmz%3D85345961.1492424416.2.2.utmccn%3D(direct)%7Cutmcsr%3D(direct)%7Cutmcmd%3D(none)%3B%2B__utmv%3D85345961.-%3B" /></noscript> <!-- START ADVERTISING FUNCTIONS  -->
 <script type="text/javascript">
 <!--
 (function() {
-	if (typeof _wld_page_id !== 'undefined') {
-		switch (_wld_page_id) {
-			//homepage
-		case 'member-index':
-			document.write("<iframe src='http://5gl1x9qc.com/d/a/3261.php' scrolling='no' border='0' frameborder='0' width='1' height='1'></iframe>");
-			break;
-			//search        
-		case 'member-search-new-index':
-			document.write("<iframe src='http://5gl1x9qc.com/d/a/3256.php' scrolling='no' border='0' frameborder='0' width='1' height='1'></iframe>");
-			break;
-			///diaries
-		case 'member-diaries-index':
-		case 'member-profile-diary-view':
-			document.write("<iframe src='http://5gl1x9qc.com/d/a/3260.php' scrolling='no' border='0' frameborder='0' width='1' height='1'></iframe>");
-			break;
-			//inbox - messages 
-		case 'member-inbox-index':
-		case 'member-inbox-conversation':
-		case 'member-inbox-compose':
-			document.write("<iframe src='http://5gl1x9qc.com/d/a/3259.php' scrolling='no' border='0' frameborder='0' width='1' height='1'></iframe>");
-			break;
-			//favourites 
-		case 'member-my-account-favourites':
-			document.write("<iframe src='http://5gl1x9qc.com/d/a/3257.php' scrolling='no' border='0' frameborder='0' width='1' height='1'></iframe>");
-			break;
-			//whos viewed me
-		case 'member-viewedme-index':
-			document.write("<iframe src='http://5gl1x9qc.com/d/a/3254.php' scrolling='no' border='0' frameborder='0' width='1' height='1'></iframe>");
-			break;
-		case 'member-encounters-index':
-			document.write("<iframe src='http://5gl1x9qc.com/d/a/3258.php' scrolling='no' border='0' frameborder='0' width='1' height='1'></iframe>");
-			break;
-			//profile page
-		case 'member-profile-index':
-			document.write("<iframe src='http://5gl1x9qc.com/d/a/3255.php' scrolling='no' border='0' frameborder='0' width='1' height='1'></iframe>");
-			break;
-			//exclude payment page           
-		case 'member-my-account-payment-mobilepay':
-		case 'member-my-account-payment-index':
-			break;
-		default:
-			document.write("<iframe src='http://5gl1x9qc.com/d/a/3261.php' scrolling='no' border='0' frameborder='0' width='1' height='1'></iframe>");
-		}
+	if (typeof memberMetadata == 'undefined') {
+		var p = 'd';
+	} else {
+		var p = 'm';
 	}
-}());
+	var w = window.intercomSettings.company;
+	var n = w.network;
+	var s = w.id;
+	var a = w.associate_id;
+	var c = document.createElement('script');
+	c.src = '//js.dplads.com/in/wld?p=' + p + '&n=' + n + '&s=' + s + '&a=' + a + '';
+	c.type = "text/javascript";
+	c.async = true;
+	document.body.appendChild(c);
+})();
 -->
-</script><iframe src="http://5gl1x9qc.com/d/a/3261.php" scrolling="no" border="0" frameborder="0" width="1" height="1"></iframe>
-<!-- END GSM IMPRESSION TRACKER -->
-  
-<!-- START ADVERTISING FUNCTIONS  -->
-<script type="text/javascript">
-<!--
-document.write('<scri'+'pt src="//s.wldcdn.net/media/waldo/a/a_functions_min.js?'+Date.now()+'"></'+'script>');
--->
-</script><script src="//s.wldcdn.net/media/waldo/a/a_functions_min.js?1580503410036"></script>
+</script>
+
 <!-- END ADVERTISING FUNCTIONS  -->
 
 <!-- Start DYNAMIC CROSS SELL -->
@@ -522,7 +486,7 @@ script.type = "text/javascript";
 script.async = true;
 document.body.appendChild(script);
 })();
-</script><script src="//sw.wldcdn.net/_img/dxs/desk_min.js?d=1580503410037" type="text/javascript" async=""></script>
+</script><script src="//sw.wldcdn.net/_img/dxs/desk_min.js?d=1580503412879" type="text/javascript" async=""></script>
 <!-- End DYNAMIC CROSS SELL --> 
 
 
