--- a/p/pr/pr-/pr-inside.com.html
+++ b/p/pr/pr-/pr-inside.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the pr-inside.com privacy policy that was archived on 2016-12-22.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20161222230620id_/http%3A//www.pr-inside.com/privacy.htm) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the pr-inside.com privacy policy that was archived on 2017-04-17.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20170417123853id_/https%3A//www.pr-inside.com/privacy.htm) for the most accurate reproduction.-->
 
 <!DOCTYPE html><html class=""><!--<![endif]--><head>
 <meta charset="utf-8">
@@ -9,17 +9,17 @@
 <link href="CSS/mainstyle.css" rel="stylesheet" type="text/css">
 
 <!--[if lt IE 9]>
-<script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script>
+<script src="https://html5shiv.googlecode.com/svn/trunk/html5.js"></script>
 <![endif]-->
 <script async="" src="//www.google-analytics.com/analytics.js"></script><script src="JS/respond.min.js"></script>
 <!--The following script tag downloads a font from the Adobe Edge Web Fonts server for use within the web page. We recommend that you do not modify it.-->
 <script>var __adobewebfontsappname__="dreamweaver"</script>
-<script src="http://use.edgefonts.net/chivo:n4:default;abril-fatface:n4:default.js" type="text/javascript"></script>
+<script src="https://use.edgefonts.net/chivo:n4:default;abril-fatface:n4:default.js" type="text/javascript"></script>
 
 </head>
 <body>
 
-	<script async="" src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+	<script async="" src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
     <script>
       (adsbygoogle = window.adsbygoogle || []).push({
         google_ad_client: "ca-pub-1618188262478211",
@@ -27,7 +27,7 @@
       });
     </script>
 	<!-- header start -->
-            <div class="fluid topline">Today: December 23, 2016, 12:06 am</div>
+            <div class="fluid topline">Today: April 17, 2017, 2:38 pm</div>
             <div class="fluid logocontainer">
             	<div class="fluid logo">
            	   			<a href="/"><img src="images/logos/pr-inside/logo_pr-inside.png" alt="PR-Inside.com"></a>
