--- a/s/st/ste/stereolabs.com.html
+++ b/s/st/ste/stereolabs.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the stereolabs.com privacy policy that was archived on 2016-12-04.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20161204013314id_/https%3A//www.stereolabs.com/zed/privacy) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the stereolabs.com privacy policy that was archived on 2017-04-18.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20170418152649id_/https%3A//www.stereolabs.com/zed/privacy) for the most accurate reproduction.-->
 
 <!DOCTYPE html><html class="no-js" lang="en"><!--<![endif]--><head>
 
@@ -10,8 +10,8 @@
 <meta name="viewport" content="width=device-width, initial-scale=1">
 
 <!-- stylesheet -->
-<link rel="stylesheet" href="https://www.stereolabs.com/css/styles.css?9956">
-<!--<link rel="stylesheet" href="/css/styles.css">-->
+<!--<link rel="stylesheet" href="https://www.stereolabs.com/css/styles.css?9956">-->
+<link rel="stylesheet" href="/css/styles.css?990">
 
 <!-- favicon -->
 <link rel="shortcut icon" type="image/x-icon" href="/favicon.ico">
@@ -70,8 +70,8 @@
 								</a>
 							</li>
                             <li>
-								<a href="/getstarted/">
-									<span>Get Started</span>
+								<a href="https://www.stereolabs.com/documentation/">
+									<span>Explore</span>
 								</a>
 							</li>	
 						</ul>
@@ -247,173 +247,90 @@
 
 </div>
 
-
-
 <!--NEW footer -->
-
 <div id="b-footer" class="gm-gradient-line-top">
-
 	<div class="l-top">
-
 		<div class="gl-wrap span12">
-
 			<ul class="b-sitemap">
-
 				<li class="span4">
-
 					<a class="e-heading" href="https://www.stereolabs.com">STEREOLABS</a>
-
 					<ul>
-
 						<li>Stereolabs is the leading provider of depth and motion sensing technology for VR/AR and autonomous robotics.
-
-
 							<br>
-
 							<br>
-
 							<!--<i class="fa fa-envelope-o" style="margin-right:4px"></i><span><a href='mail&#116;&#111;&#58;s&#117;ppo&#114;%74%4&#48;stere&#111;la&#98;&#37;7&#51;&#46;c&#111;m'>su&#112;&#112;or&#116;&#64;s&#116;ereolabs&#46;&#99;o&#109;</a>
-
                       </span>-->
-
 						</li>
-
 					</ul>
-
 				</li>
-
-
-
 				<li><a class="e-heading" href="https://www.stereolabs.com/zed/specs/">ZED</a>
-
 					<ul>
-
 						<li><a href="https://www.stereolabs.com">Overview</a>
-
 						</li>
-
 						<li><a href="https://www.stereolabs.com/zed/specs/">Product</a>
-
 						</li>
-
 						<li><a href="https://support.stereolabs.com/hc/">Support</a>
-
 						</li>
-						
                         <li><a href="https://www.stereolabs.com/company/">Contact Us</a>
-
 						</li>
 						<li><a href="http://zedstore.stereolabs.com/products/zed">Order Now</a>
-
 						</li>
-
 					</ul>
-
 				</li>
-
-
-
-
 
 				<!-- Begin newsletter -->
-
 				<li class="nletter">
-
 					<p class="e-heading">Stay updated about ZED!</p>
-
 					<ul>
-
 						<li>
-
 							<form action="https://stereolabs.us9.list-manage.com/subscribe/post?u=35b3e50d2e3f106aaf3132dee&amp;id=1a5754fa62" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate="">
-
 								<input type="email" value="" name="EMAIL" class="inputform_subscribe" id="mce-EMAIL" placeholder="Your Email" required="">
-
 								<div style="position: absolute; left: -5000px;">
-
 									<input type="text" name="b_35b3e50d2e3f106aaf3132dee_1a5754fa62" tabindex="-1" value="">
-
 								</div>
-
 								<input type="submit" class="btn newsletter" value="Subscribe" name="subscribe" id="mc-embedded-subscribe">
-
 							</form>
-
 						</li>
-
 					</ul>
-
 				</li>
-
 				<!-- End newsletter -->
-
 			</ul>
-
-
-
 		</div>
-
 	</div>
-
 	<div class="l-bottom">
-
 		<div class="gl-wrap span12">
-
 			<ul class="r-links">
-
 				<li>
-
 					<a href="https://www.stereolabs.com/zed/terms/">Terms</a>
-
 				</li>
-
 				<li>
-
 					<a href="https://www.stereolabs.com/zed/privacy/">Privacy</a>
-
 				</li>
-
 				<li>
-
 					<a href="https://www.stereolabs.com/company/">About Us</a>
-
 				</li>
-
 			</ul>
-
-
 
 			<ul class="b-social">
-
 				<li class="tw"><a href="https://twitter.com/stereolabs3d" target="_blank" title="Stereolabs Twitter">Twitter</a>
-
 				</li>
-
 				<li class="in"><a href="https://www.linkedin.com/company/stereolabs" target="_blank" title="Stereolabs LinkedIn">LinkedIn</a>
-
 				</li>
-
 				<li class="yt"><a href="https://www.youtube.com/channel/UCroqVK9DSDfdaDEg2jQVvTg" target="_blank" title="Stereolabs Youtube">Youtube</a>
-
 				</li>
-
 			</ul>
 
-			<div class="e-copyright">© 2016 Stereolabs</div>
+			<div class="e-copyright">© 2017 Stereolabs</div>
 
 			<div id="bx-composite-banner" style="float: right; margin-top: -5px;"></div>
-
 		</div>
-
 	</div>
-
 </div>
-
 <!--/endfooter-->
 
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
 
-<link href="https://fonts.googleapis.com/css?family=Nunito:300,400,700" rel="stylesheet" type="text/css">
+<link href="https://fonts.googleapis.com/css?family=Nunito:300,400,500,600,700" rel="stylesheet" type="text/css">
 <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,700" rel="stylesheet" type="text/css">
 <link href="https://fonts.googleapis.com/css?family=Lato:300,500,700" rel="stylesheet">
 
