dbr.ee (archived on 2017-04-19)
{
  "alexa_rank": 16966,
  "analysis_subcorpus": true,
  "categories": "business",
  "char_count": 7133,
  "classifier_probability": 0.97,
  "cross_domain_homepage_redir": false,
  "flesch_ease": "difficult",
  "flesch_kincaid": 13.73,
  "homepage_snapshot_redirected_domain": "dbr.ee",
  "homepage_snapshot_redirected_url": "https://web.archive.org/web/20170419104650id_/https://dbr.ee/",
  "homepage_snapshot_url": "https://web.archive.org/web/20170419104650id_/http%3A//dbr.ee",
  "interval": "2017_A",
  "link_text": "Privacy",
  "parked_domain": false,
  "phase": "A",
  "policy_domain": "dbr.ee",
  "policy_filetype": "html",
  "policy_snapshot_url": "https://web.archive.org/web/20170419105039id_/https%3A//dbr.ee/privacy",
  "policy_title": "Privacy Policy - DBREE",
  "policy_url": "dbr.ee/privacy",
  "sha1": "37f190ff12ff2095b88065e262f43aac0a786d70",
  "simhash": 9722228378084627630,
  "simhash_updated": false,
  "site_hostname": "dbr.ee",
  "site_url": "http://dbr.ee",
  "smog": NaN,
  "strict_updated": false,
  "timestamp": "20170419105039",
  "word_count": 1139,
  "year": 2017
}

--- a/d/db/dbr/dbr.ee.html
+++ b/d/db/dbr/dbr.ee.html
@@ -1,11 +1,11 @@
-<!--The following is the downloaded HTML source of the dbr.ee privacy policy that was archived on 2016-03-21.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20160321145629id_/http%3A//dbr.ee/privacy) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the dbr.ee privacy policy that was archived on 2017-04-19.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20170419105039id_/https%3A//dbr.ee/privacy) for the most accurate reproduction.-->
 
 <!DOCTYPE html><html><head>
     <meta charset="UTF-8">
     <meta id="viewport-meta" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0" name="viewport">
-    <link rel="stylesheet" media="all" href="/assets/application-e2d7799058084a4aacb3e6f9296cc5dcb22a33dc9c968ebbd7b882843c34907f.css">
-    <script async="" src="//www.google-analytics.com/analytics.js"></script><script src="/assets/application-3ef2cef110040e931b386b895c744bb3933b4fec07094a682415a5514c33a1c3.js" async="async"></script>
+    <link rel="stylesheet" media="all" href="/assets/application-ca1571fb0b5a62b9d94041631cac82417cdbf4e5db3be596d592d9fdba0f084a.css">
+    <script async="" src="//www.google-analytics.com/analytics.js"></script><script src="/assets/application-0cf0929ac5ac034c466cef1293034e44203bdc68f1c05922356ef95dd41cfcdd.js" async="async"></script>
     
     <title>Privacy Policy - DBREE</title>
 <meta name="description" content="Minimalistic media sharing">
@@ -23,8 +23,13 @@
 <link rel="shortcut icon" type="image/x-icon" href="/assets/favicon-65f03606758358c0467647842f65f5de9b85893f3df5c5f1b3eb5960fa9adc8d.ico">
 <link rel="mask-icon" type="image/x-icon" href="/assets/safari-pin-icon-074e2c098f20b1e5c2c047fd1681683ed872c5d326e8baba508020686dda410b.svg" color="black">
 
+    <style>
+      .footer-spacer {
+        height: 80px !important;
+      }
+    </style>
     <meta name="csrf-param" content="authenticity_token">
-<meta name="csrf-token" content="0vVV7NyrDBO++vpfb2gmjhGBB/9zyV9+gBmJnz91mMA8R2mfGX6poiOsIX8ARfZiPPinyNXcgaPgZvL5EpFo1w==">
+<meta name="csrf-token" content="7oqukjW0WMqshdII6Hdin7bYwjiIEGUoh49c58Upk5i6kCp8eilVEgId9ioYcK3uFLT0Qwffgp8ScOd3WmEeKA==">
     <!--[if lte IE 9]>
       <script type="text/javascript">window.oldEI = true;</script>
       <script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script>
@@ -85,7 +90,7 @@
 </ul>
 
         <ul class="sidebar-nav-footer">
-  <li>© 2016 DBREE <br></li>
+  <li>© 2017 DBREE <br></li>
   <li><a href="/terms">Terms</a></li>
   <li><a href="/privacy">Privacy</a></li>
   <li><a href="/dmca">DMCA</a></li>
@@ -211,7 +216,7 @@
 
     
     <div id="modal-holder"></div>
-  <script type="text/javascript">/* <![CDATA[ */(function(d,s,a,i,j,r,l,m,t){try{l=d.getElementsByTagName('a');t=d.createElement('textarea');for(i=0;l.length-i;i++){try{a=l[i].href;s=a.indexOf('/cdn-cgi/l/email-protection');m=a.length;if(a&&s>-1&&m>28){j=28+s;s='';if(j<m){r='0x'+a.substr(j,2)|0;for(j+=2;j<m&&a.charAt(j)!='X';j+=2)s+='%'+('0'+('0x'+a.substr(j,2)^r).toString(16)).slice(-2);j++;s=decodeURIComponent(s)+a.substr(j,m-j)}t.innerHTML=s.replace(/</g,'&lt;').replace(/>/g,'&gt;');l[i].href='mailto:'+t.value}}catch(e){}}}catch(e){}})(document);/* ]]> */</script>
+  
 
 
 </body></html>
