--- a/t/tr/tri/trippeo.com.html
+++ b/t/tr/tri/trippeo.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the trippeo.com privacy policy that was archived on 2016-09-10.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20160910161332id_/https%3A//trippeo.com/privacy) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the trippeo.com privacy policy that was archived on 2017-04-19.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20170419165710id_/https%3A//www.trippeo.com/privacy) for the most accurate reproduction.-->
 
 <!DOCTYPE html><html class=" js flexbox canvas canvastext webgl no-touch geolocation postmessage websqldatabase indexeddb hashchange history draganddrop websockets rgba hsla multiplebgs backgroundsize borderimage borderradius boxshadow textshadow opacity cssanimations csscolumns cssgradients cssreflections csstransforms csstransforms3d csstransitions fontface generatedcontent video audio localstorage sessionstorage webworkers applicationcache svg inlinesvg smil svgclippaths" lang="" style=""><head>
         <meta charset="utf-8">
